<resources>
    <string name="app_name">eMOVE</string>

    <string name="facebook_app_id">375266629678021</string>
    <string name="fb_login_protocol_scheme">fb375266629678021</string>
    <string name="title_activity_maps">Map</string>

    <string name="home_menu">Home</string>
    <string name="ride_menu">Ride</string>
    <string name="user_menu">User</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- User fragment -->
    <string name="hint_name">Name</string>
    <string name="general_title">General</string>
    <string name="hint_home_address">Home Address</string>
    <string name="hint_work_address">Work Address</string>
    <string name="hint_phone">Phone Number</string>
    <string name="driver_title">I am a driver</string>
    <string name="car_info_title">Car Info</string>
    <string name="hint_make">Make</string>
    <string name="hint_model">Model</string>
    <string name="hint_color">Color</string>
    <string name="hint_registration">Registration Number</string>
    <string name="hint_seats">Available seats</string>
    <string name="hint_extra">Notes</string>

    <!-- Home -->
    <string name="search_for_ride">Search for a Ride</string>
    <string name="start_a_trip">Start a Trip</string>

    <!-- Start Trip -->
    <string name="hint_starting_location">Starting Location</string>
    <string name="hint_destination">Destination</string>
    <string name="hint_time">Time</string>
    <string name="start">Start</string>
    <string name="search">Search</string>


    <!-- Search Results -->
    <string name="details">See Details</string>
    <string name="title_activity_choose_location">Map</string>

</resources>
