<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_home"
            android:enabled="true"
            android:icon="@drawable/com_facebook_button_icon"
            android:title="@string/home_menu"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_ride"
            android:enabled="true"
            android:icon="@drawable/com_facebook_button_icon"
            android:title="@string/ride_menu"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_user"
            android:enabled="true"
            android:icon="@drawable/com_facebook_button_icon"
            android:title="@string/user_menu"
            app:showAsAction="ifRoom" />
</menu>