<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.UserFragment">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cv_general"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                card_view:cardElevation="4dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">

                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/iv_picture"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_name"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/hint_name"
                        android:layout_below="@id/iv_picture" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_general"
                        android:text="@string/general_title"
                        android:layout_marginTop="10dp"
                        android:layout_below="@id/tv_name" />

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_home_address"
                        android:hint="@string/hint_home_address"
                        android:layout_below="@+id/tv_general" />

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_work_address"
                        android:hint="@string/hint_work_address"
                        android:layout_below="@+id/et_home_address" />

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_phone"
                        android:hint="@string/hint_phone"
                        android:layout_below="@+id/et_work_address" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_general"
                card_view:cardUseCompatPadding="true"
                android:layout_marginTop="5dp"
                card_view:cardElevation="4dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rl_toggle">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:id="@+id/tv_driver"
                            android:text="@string/driver_title" />

                    <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/sw_driver"
                            android:layout_alignParentRight="true"/>

                </RelativeLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rl_car_extra"
                        android:visibility="gone"
                        android:layout_below="@+id/rl_toggle">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_car"
                            android:text="@string/car_info_title"
                            android:layout_marginTop="10dp" />

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_make"
                            android:hint="@string/hint_make"
                            android:layout_below="@+id/tv_car" />

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_model"
                            android:hint="@string/hint_model"
                            android:layout_below="@+id/et_make" />

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_color"
                            android:hint="@string/hint_color"
                            android:layout_below="@+id/et_model" />

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_registration"
                            android:hint="@string/hint_registration"
                            android:layout_below="@+id/et_color" />

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_seats"
                            android:hint="@string/hint_seats"
                            android:layout_below="@+id/et_registration" />

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_extra"
                            android:hint="@string/hint_extra"
                            android:layout_below="@+id/et_seats" />

                </RelativeLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>