<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.SearchFragment">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_general"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_starting_position"
                    android:focusable="false"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_starting_location" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_destination"
                    android:focusable="false"
                    android:hint="@string/hint_destination"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/et_starting_position" />

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_time"
                    android:hint="@string/hint_time"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/et_destination" />

            <Button
                    android:text="@string/start"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:id="@+id/bt_search"
                    android:layout_below="@+id/et_time"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>